--- a/style.css
+++ b/style.css
@@ -172,12 +172,16 @@ h2 {
   background-color: #382c34;
   border-top: 5px #F34088 solid;
   margin-top: 50px;
-  justify-content: center;
-  align-items: center;
   height: 400px;
-  display: flex;
+  width: 100%;
+}
+
+.footer-inner {
+    display: flex;
   grid-template-rows: auto;
-  grid-template-columns: 1fr 1fr 1fr
+  grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-around;
+  align-items: center;
 }
 
 .header-center {
@@ -186,7 +190,7 @@ h2 {
   color: white;
 }
 
-.store {
+.botton {
   position: relative;
   right: 20px;
   display: flex;
@@ -271,7 +275,7 @@ nav {
   transform: rotate(-45deg) translate(7px, -7px);
 }
 
-@media (max-width: 800px) {
+@media (max-width: 400px) {
   .nav-inner {
     flex-wrap: wrap;
     justify-content: space-between;
@@ -416,7 +420,7 @@ nav {
 }
 }
 
-@media (min-width: 801px) {
+@media (min-width: 401px) {
   .nav-links-row {
     display: flex !important;
     flex-direction: row;
